PoC working, no dropbox

--- a/config/veilbot.cfg
+++ b/config/veilbot.cfg
@@ -11,7 +11,8 @@ realname = Veilbot
 
 [Dropbox]
 # Root share url for Dropbox
-share_url = http://
+share_url = https://
+local_path = ~/Dropbox
 
 [Server]
 # Automatically connect to server
