First working PoC

--- a/config/veilbot.cfg
+++ b/config/veilbot.cfg
@@ -12,7 +12,8 @@ realname = Veilbot
 [Dropbox]
 # Root share url for Dropbox
 share_url = https://
-local_path = ~/Dropbox
+# Absolute path to Dropbox share directory 
+share_lpath = /home/moloch/Dropbox/Public/veil
 
 [Server]
 # Automatically connect to server
