Fixed dropbox linking problem

--- a/config/veilbot.cfg
+++ b/config/veilbot.cfg
@@ -11,9 +11,13 @@ realname = Veilbot
 
 [Dropbox]
 # Root share url for Dropbox
-share_url = https://
-# Absolute path to Dropbox share directory 
-share_lpath = /home/moloch/Dropbox/Public/veil
+share_url = https://dl.dropboxusercontent.com/u/341940/
+
+# Absolute path to Dropbox share directory
+dropbox_lpath = /home/moloch/Dropbox/Public
+
+# Relative path from dropbox_lpath to drop bins in
+share_lpath = veil/
 
 [Server]
 # Automatically connect to server
